@@ -9,6 +9,7 @@ Fixes:
 - cmdline: Catch error when piping output to another
   program or file under Windows.
   Closes: GH bug #13
+- comics: Retry download on empty content to reduce empty file errors.
 
 
 Dosage 1.12 (released 4.3.2013)
